2018.01.11
 + start project

2018.01.13
 * first test
 * exchange MSB and LSB of RF frequency
 + add setLDR() - set LowDataRateOptimize bit

2018.01.14
 * add address of some SX127x registers

2018.01.15
 * update "REAMDE.md"

2018.01.27
 + begin work under FSK/OOK modes

2018.02.04
 + first test TX in FSK/OOK packet mode (control by RTL-SDR)
 + first test RX in FSK packet mode

2018.02.06
 + add port of ESP32 (tested)
 + test and debug CRC on/off
 + first test TX/RX in OOK packet mode
 + add ramp(), rx(), tx(), cad() methods